@@ -226,7 +226,7 @@ public abstract class RepeatableNodeCommandModule<CP extends Provider> extends M
         List<CP> providers = targetNodes.stream()
             .map(n -> n.maybeGetProvider(commandProviderClass))
             .flatMap(Optional::stream)
-            .collect(Collectors.toList());
+            .toList();
 
         if (providers.size() != targetNodes.size())
         {
